Feature[Exercise api]: added PUT POST and DELETE
